--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play"
+        android:text="@string/play_label"
         android:id="@+id/button"
         android:layout_marginBottom="84dp"
         android:layout_alignParentBottom="true"
@@ -21,7 +21,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shop/Recap"
+        android:text="@string/shop_label"
         android:id="@+id/button2"
         android:layout_marginTop="55dp"
         android:layout_alignTop="@+id/button"
