--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_label"
-        android:id="@+id/button"
+        android:id="@+id/play_button"
         android:layout_marginBottom="84dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -24,7 +24,7 @@
         android:text="@string/shop_label"
         android:id="@+id/button2"
         android:layout_marginTop="55dp"
-        android:layout_alignTop="@+id/button"
+        android:layout_alignTop="@+id/play_button"
         android:layout_centerHorizontal="true" />
 
 
@@ -33,13 +33,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/logo"
-        android:layout_below="@+id/imageButton"
+        android:layout_below="@+id/settings_image_button"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
+        android:id="@+id/settings_image_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -47,17 +47,17 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton3"
+        android:id="@+id/leader_image_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/imageButton" />
+        android:layout_alignBottom="@+id/settings_image_button" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:layout_above="@+id/button"
+        android:layout_above="@+id/play_button"
         android:layout_centerHorizontal="true"
         android:src="@drawable/isacco"/>
 
