--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,7 @@
     <item name="playButton" type="id" />
     <item name="settingsButton" type="id" />
     <item name="shopButton" type="id" />
+    <item name="one" type="id" />
+    <item name="two" type="id" />
+    <item name="three" type="id" />
 </resources>
