--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_label"
-        android:id="@+id/play_button"
+        android:id="@id/playButton"
         android:layout_marginBottom="84dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/shop_label"
-        android:id="@+id/button2"
+        android:id="@id/shopButton"
         android:layout_marginTop="55dp"
-        android:layout_alignTop="@+id/play_button"
+        android:layout_alignTop="@id/playButton"
         android:layout_centerHorizontal="true" />
 
 
@@ -33,13 +33,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/logo"
-        android:layout_below="@+id/settings_image_button"
+        android:layout_below="@id/settingsButton"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/settings_image_button"
+        android:id="@id/settingsButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -47,17 +47,17 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/leader_image_button"
+        android:id="@id/leaderButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/settings_image_button" />
+        android:layout_alignBottom="@id/settingsButton" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView2"
-        android:layout_above="@+id/play_button"
+        android:layout_above="@id/playButton"
         android:layout_centerHorizontal="true"
         android:src="@drawable/isacco"/>
 
