--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -56,7 +56,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
+        android:id="@id/currentPgView"
         android:layout_above="@id/playButton"
         android:layout_centerHorizontal="true"
         android:src="@drawable/isacco"/>
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton5"
-        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignBottom="@id/currentPgView"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"
         android:layout_marginBottom="41dp" />
