--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -7,6 +7,7 @@
     <item name="settings_resetBut" type="id" />
     <item name="settings_ipText" type="id" />
     <item name="settings_backBut" type="id" />
+    <item name="currentPgView" type="id" />
     <item name="shopButton" type="id" />
     <item name="leaderButton" type="id" />
     <item name="one" type="id" />
