--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="playButton" type="id" />
+
     <item name="settingsButton" type="id" />
     <item name="settings_musicBut" type="id" />
     <item name="settings_soundBut" type="id" />
     <item name="settings_resetBut" type="id" />
     <item name="settings_ipText" type="id" />
     <item name="settings_backBut" type="id" />
+
     <item name="currentPgView" type="id" />
+    <item name="choosePg_rootLayout" type="id" />
+    <item name="choosePg_viewer" type="id" />
+    <item name="choosePg_nameLabel" type="id" />
+    <item name="choosePg_charImage" type="id" />
+
     <item name="shopButton" type="id" />
     <item name="leaderButton" type="id" />
     <item name="one" type="id" />
